  26 Sep 2012; Manuel Rueger (mrueg) gentoo@rueg.eu metadata.xml,
  zsh-completions-0.7.0.ebuild:
  app-shells/zsh-completions: Fix deps

*zsh-completions-0.7.0 (26 Sep 2012)

  26 Sep 2012; Manuel Rueger (mrueg) gentoo@rueg.eu +metadata.xml,
  +zsh-completions-0.7.0.ebuild:
  app-shells/zsh-completions: Initial version