@@ -1,4 +1,4 @@
 DIST zsh-completions-0.7.0.tar.gz 116032 SHA256 f69217d77366f40393ff361acdf53fe7bdaf8039b94b3090bfa08b029ad820aa SHA512 132871e9700c1eeade2e6af6d00c37b0af5b84a65a1bc616fa870a6d2750d04df094536bafe52331fe96361b5ec33a4e2f1d2ca5ba9193c3dec22303df881de8 WHIRLPOOL 21990ce1bcad60b77130512a87dcd6a2f91f04e872f1572b8c27124087315557dd2e908857313a3c003a91c0db5420c09f29f8595a71fa23e9cebc52e10e2cce
-EBUILD zsh-completions-0.7.0.ebuild 1041 SHA256 98a61e8c60d2545434cab82e3624cebaaba15a8e86927864007bfc28b1f26a14 SHA512 bbbf73160a44154dae2910763432ba00f53eb48151befce5f02d8732b0aa834ad2a18ad8e5b65282187c15628f34f8692ceb26a4a9fd20b440bb2ecf828f6a8b WHIRLPOOL ba34742441de1013d06d85aac28b94bd725beed288eeae41f6b9c19cded1518f956adf0037184db4b048abe3af3fd1cff6bc8afea000321e1be407567a2c60e5
-MISC ChangeLog 322 SHA256 e7313133594c5b70ba36209bab5756bf8eed2c3cffc5c034de7ffbd019bb5aa3 SHA512 c9ba90d212ca0a0727ecc68e77393582867e34dfece93ee3f074c1cc5fe02e9fc7e565343025c7cbfd867bf1c40f0f154b93b35a814d1c49e3da5cc00066b765 WHIRLPOOL d96a16442b7348b35d115f391e5d00ac4ebd45128e26a135881fbcfad29e0fa2c717b0bfcb21bd5be3d17ead263d75d414441bec3ea8dcb9d0cde07f194b826e
+EBUILD zsh-completions-0.7.0.ebuild 878 SHA256 95468252e84fe1c1e4cd9b674043da735de2469be785896db93e78e9749bf536 SHA512 cdd4c6f6b3fb88b40aa195485d3cf029a138cb92d71b79faade80a2281aa04dc4fc454f30648905b7fbfcc9965c1efefa83c146a66348f8d3a0e01dc7fdae740 WHIRLPOOL 7716629af89fa2cae92e34fee994ad98d8603d569fa8af13d532f31760732c2d75bc94c305e7725036635bfb2799b10c789fe57787836d77a1abca29a30caab3
+MISC ChangeLog 450 SHA256 23a4fae55ef2e70007018f121914da7e5d1d7a9704f7878a87319136b2320abb SHA512 97d2158d92208a588d6172759d426f6af5e3865a307e0199087f5e8db63da12ed0e6b2877658c6bc1f2572149926cbf29e97f68c49fcd34c905a59b579292693 WHIRLPOOL 13e5ef34c38b2b9b2a0f871dc6760af9636488c8ec86d1de146d2e9fdbdaffb206dbfd81df9b1f735c7b7298aff371e6510e038f7e8356e5ebe123edcf3c6678
 MISC metadata.xml 354 SHA256 6d55476e655a8191c0888ce36e42a6e8e256123ba9061df184ffab374208fe8b SHA512 601e945e36e89326d3f984ca1aaafb480b0107da5d38a0bbca9109d24efb46e8241d146d04504b0b763eb6b58ce29766c2c34b3782d5dabf0d82ddbb6ce710e9 WHIRLPOOL 845df63d267fc076831ec01906e75908fe93bece5de0c29b3271a18d723c32aee4772d7717403c74aafac5d4b071c569a98212a89aaf8a5805781df90e61ec24
